PHPUnit tests and README
